overwritten using the workshop branch

--- a/react-client/.env
+++ b/react-client/.env
@@ -1,7 +1,8 @@
 // This file is required to run the React app locally. 
 // Set up the environment variables listed below. You can find their values by deploying the CDK package from the root of the Git repository.
 // You can find values from the "output" of the root Cloudformation stack.
+// Append "/v1" at the end of the REACT_APP_APIGATEWAY_BASE_URL_EXTR_SRV and REACT_APP_APIGATEWAY_BASE_URL_EVAL_SRV base URLs
 REACT_APP_COGNITO_REGION = ""
-REACT_APP_COGNITO_USER_POOL_ID = "us-west-2_WgKsTXCSL"
-REACT_APP_COGNITO_USER_POOL_CLIENT_ID = "1skmtv5q5qb6p4u6glc4mm1h9s"
+REACT_APP_COGNITO_USER_POOL_ID = ""
+REACT_APP_COGNITO_USER_POOL_CLIENT_ID = ""
 REACT_APP_WEBSOCKET_URL = "ws://localhost:8081"
