--- a/react-client/package.json
+++ b/react-client/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": ".",
+  "homepage": "/proxy/3000/",
   "name": "nova-s2s-voice-chat-client",
   "version": "0.1.0",
   "private": true,
